Fixed background color not changing on focus visible

--- a/Client/src/Components/BasicTable/index.css
+++ b/Client/src/Components/BasicTable/index.css
@@ -180,6 +180,7 @@
   padding: 4px;
 }
 .pagination-dropdown li.Mui-selected,
+.pagination-dropdown li.Mui-selected.Mui-focusVisible,
 .pagination-dropdown li.Mui-selected:hover  {
   background-color: #f4f4f4;
 }
